// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON Schema test suite additionalItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 1;
    for (; v1 < v0.length; (v1)++) {
      if (f1(v0[v1]) !== null) {
        return 'additionalItems';
      }
    }
    if (0 < v0.length && f2(v0[0]) !== null) {
      return 'items[0]';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== null) {
          return 'items';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0.length > 3) {
      return 'additionalItems';
    }
    if (0 < v0.length && f1(v0[0]) !== null) {
      return 'items[0]';
    }
    if (1 < v0.length && f1(v0[1]) !== null) {
      return 'items[1]';
    }
    if (2 < v0.length && f1(v0[2]) !== null) {
      return 'items[2]';
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalItems.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      return 'items[0]';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            return 'properties[foo]';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== null) {
            return 'properties[bar]';
          } else {
            v3 = true;
          }
        }
        if (v1.match(/^v/)) {
          if (f1(v2) !== null) {
            return 'properties[^v]';
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          return 'additionalProperties';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            return 'properties[foo]';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f1(v2) !== null) {
            return 'properties[bar]';
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f2(v2) !== null) {
          return 'additionalProperties';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'boolean') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (f1(v2) !== null) {
          return 'additionalProperties';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite additionalProperties.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== null) {
      return 'allOf';
    }
    if (f2(v0) !== null) {
      return 'allOf';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f3(v1) !== null) {
          return 'properties[bar]';
        }
      } else {
        return 'required[bar]';
      }
    }
    return null;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f4(v1) !== null) {
          return 'properties[foo]';
        }
      } else {
        return 'required[foo]';
      }
    }
    return null;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (f1(v0) !== null) {
      return 'allOf';
    }
    if (f2(v0) !== null) {
      return 'allOf';
    }
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f3(v1) !== null) {
          return 'properties[bar]';
        }
      } else {
        return 'required[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f4(v1) !== null) {
          return 'properties[foo]';
        }
      } else {
        return 'required[foo]';
      }
    }
    return null;
  }
  function f2(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.baz;
      if (v1 !== undefined) {
        if (f5(v1) !== null) {
          return 'properties[baz]';
        }
      } else {
        return 'required[baz]';
      }
    }
    return null;
  }
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  function f5(v0) {
    if (v0 !== null) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite allOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) !== null) {
      return 'allOf';
    }
    if (f2(v0) !== null) {
      return 'allOf';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'number' && v0 > 30) {
      return 'maximum';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 20) {
      return 'minimum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === null && (v1)++;
    f2(v0) === null && (v1)++;
    if (v1 === 0) {
      return 'anyOf';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      return 'minimum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite anyOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    f1(v0) === null && (v1)++;
    f2(v0) === null && (v1)++;
    if (v1 === 0) {
      return 'anyOf';
    }
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      return 'maxLength';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      return 'minLength';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite default.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 4) {
      return 'minLength';
    }
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && v0.foo === undefined) {
      return 'dependencies[bar]';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.quux !== undefined) {
      if (v0.foo === undefined) {
        return 'dependencies[quux]';
      }
      if (v0.bar === undefined) {
        return 'dependencies[quux]';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite dependencies.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && v0.bar !== undefined && f1(v0) !== null) {
      return 'dependencies[bar]';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        return 'properties[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 1) {
      (v1)++;
    }
    if (v0 === 2) {
      (v1)++;
    }
    if (v0 === 3) {
      (v1)++;
    }
    if (v1 === 0) {
      return 'enum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (v0 === 6) {
      (v1)++;
    }
    if (v0 === 'foo') {
      (v1)++;
    }
    if (JSON.stringify(v0) === '[]') {
      (v1)++;
    }
    if (v0 === true) {
      (v1)++;
    }
    if (JSON.stringify(v0) === '{\\"foo\\":12}') {
      (v1)++;
    }
    if (v1 === 0) {
      return 'enum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite enum.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined) {
        if (f2(v1) !== null) {
          return 'properties[bar]';
        }
      } else {
        return 'required[bar]';
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 'type';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'foo') {
      (v1)++;
    }
    if (v1 === 0) {
      return 'enum';
    }
    return null;
  }
  function f2(v0) {
    var v1;
    v1 = 0;
    if (v0 === 'bar') {
      (v1)++;
    }
    if (v1 === 0) {
      return 'enum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f1(v0[v1]) !== null) {
          return 'items';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite items.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      return 'items[0]';
    }
    if (1 < v0.length && f2(v0[1]) !== null) {
      return 'items[1]';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length > 2) {
      return 'maxItems';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length > 2) {
      return 'maxLength';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maxProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length > 2) {
      return 'maxProperties';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 > 3) {
      return 'maximum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite maximum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 >= 3) {
      return 'maximum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (Array.isArray(v0) && v0.length < 1) {
      return 'minItems';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minLength.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      return 'minLength';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0)) && Object.keys(v0).length < 1) {
      return 'minProperties';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 < 1.1) {
      return 'minimum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite minimum.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'number' && v0 <= 1.1) {
      return 'minimum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 2;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 'multipleOf';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 1.5;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 'multipleOf';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite multipleOf.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (typeof v0 === 'number') {
      v1 = v0 / 0.0001;
      if (typeof v1 !== 'number' || v1 % 1 !== 0) {
        return 'multipleOf';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === null) {
      return 'not';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === null) {
      return 'not';
    }
    return null;
  }
  function f1(v0) {
    var v2;
    v2 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v2)++;
    }
    if (typeof v0 !== 'boolean') {
      (v2)++;
    }
    if (v2 === 2) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (f1(v0) === null) {
      return 'not';
    }
    return null;
  }
  function f1(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        return 'properties[foo]';
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite not.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (f2(v0) === null) {
      return 'not';
    }
    return null;
  }
  function f2(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === null) {
      (v1)++;
    }
    if (f2(v0) === null) {
      (v1)++;
    }
    if (v1 !== 1) {
      return 'oneOf';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 < 2) {
      return 'minimum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite oneOf.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    v1 = 0;
    if (f1(v0) === null) {
      (v1)++;
    }
    if (f2(v0) === null) {
      (v1)++;
    }
    if (v1 !== 1) {
      return 'oneOf';
    }
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 === 'string' && v0.length < 2) {
      return 'minLength';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'string' && v0.length > 4) {
      return 'maxLength';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/^a*$/))) {
      return 'pattern';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite pattern.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 === 'string' && !(v0.match(/a+/))) {
      return 'pattern';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/f.*o/) && f1(v2) !== null) {
          return 'properties[f.*o]';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/a*/) && f1(v2) !== null) {
          return 'properties[a*]';
        }
        if (v1.match(/aaa*/) && f2(v2) !== null) {
          return 'properties[aaa*]';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 === 'number' && v0 > 20) {
      return 'maximum';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite patternProperties.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    var v1, v2;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        if (v1.match(/[0-9]{2,}/) && f1(v2) !== null) {
          return 'properties[[0-9]{2,}]';
        }
        if (v1.match(/X_/) && f2(v2) !== null) {
          return 'properties[X_]';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'boolean') {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f2(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite properties.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f1(v2) !== null) {
            return 'properties[foo]';
          } else {
            v3 = true;
          }
        }
        if (v1 === 'bar') {
          if (f2(v2) !== null) {
            return 'properties[bar]';
          } else {
            v3 = true;
          }
        }
        if (v1.match(/f.o/)) {
          if (f3(v2) !== null) {
            return 'properties[f.o]';
          } else {
            v3 = true;
          }
        }
        if (v3 === false && f4(v2) !== null) {
          return 'additionalProperties';
        }
      }
    }
    return null;
  }
  function f1(v0) {
    if (Array.isArray(v0) && v0.length > 3) {
      return 'maxItems';
    }
    if (!(Array.isArray(v0))) {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      return 'type';
    }
    return null;
  }
  function f3(v0) {
    if (Array.isArray(v0) && v0.length < 2) {
      return 'minItems';
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1, v2, v3;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      for (var v1 in v0) {
        v2 = v0[v1];
        v3 = false;
        if (v1 === 'foo') {
          if (f0(v2) !== null) {
            return 'properties[foo]';
          } else {
            v3 = true;
          }
        }
        if (v3 === false) {
          return 'additionalProperties';
        }
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (0 < v0.length && f1(v0[0]) !== null) {
      return 'items[0]';
    }
    if (1 < v0.length && f1(v0[1]) !== null) {
      return 'items[1]';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.tilda;
      if (v1 !== undefined && f4(v1) !== null) {
        return 'properties[tilda]';
      }
      v1 = v0.slash;
      if (v1 !== undefined && f4(v1) !== null) {
        return 'properties[slash]';
      }
      v1 = v0.percent;
      if (v1 !== undefined && f4(v1) !== null) {
        return 'properties[percent]';
      }
    }
    return null;
  }
  function f4(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 5`] = `
"(function() {
  function f3(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f3,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f2(v1) !== null) {
        return 'properties[foo]';
      }
    }
    return null;
  }
  function f2(v0) {
    if (!(Array.isArray(v0))) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.$ref;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[$ref]';
      }
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite ref.json matches snapshot 9`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.meta;
      if (v1 !== undefined) {
        if (f1(v1) !== null) {
          return 'properties[meta]';
        }
      } else {
        return 'required[meta]';
      }
      v1 = v0.nodes;
      if (v1 !== undefined) {
        if (f2(v1) !== null) {
          return 'properties[nodes]';
        }
      } else {
        return 'required[nodes]';
      }
    }
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 'type';
    }
    return null;
  }
  function f1(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  function f2(v0) {
    var v1, v2;
    if (Array.isArray(v0)) {
      v1 = 0;
      v2 = null;
      for (; v1 < v0.length; (v1)++) {
        if (f3(v0[v1]) !== null) {
          return 'items';
        }
      }
    }
    if (!(Array.isArray(v0))) {
      return 'type';
    }
    return null;
  }
  function f3(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined) {
        if (f1(v1) !== null) {
          return 'properties[foo]';
        }
      } else {
        return 'required[foo]';
      }
      v1 = v0.bar;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[bar]';
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite required.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    var v1;
    if (v0 && typeof v0 === 'object' && !(Array.isArray(v0))) {
      v1 = v0.foo;
      if (v1 !== undefined && f1(v1) !== null) {
        return 'properties[foo]';
      }
    }
    return null;
  }
  function f1(v0) {
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 2`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'number') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 3`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'string') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 4`] = `
"(function() {
  function f0(v0) {
    if (!(v0) || typeof v0 !== 'object' || Array.isArray(v0)) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 5`] = `
"(function() {
  function f0(v0) {
    if (!(Array.isArray(v0))) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 6`] = `
"(function() {
  function f0(v0) {
    if (typeof v0 !== 'boolean') {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 7`] = `
"(function() {
  function f0(v0) {
    if (v0 !== null) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite type.json matches snapshot 8`] = `
"(function() {
  function f0(v0) {
    var v2;
    v2 = 0;
    if (typeof v0 !== 'number' || v0 % 1 !== 0) {
      (v2)++;
    }
    if (typeof v0 !== 'string') {
      (v2)++;
    }
    if (v2 === 2) {
      return 'type';
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;

exports[`JSON Schema test suite uniqueItems.json matches snapshot 1`] = `
"(function() {
  function f0(v0) {
    var v2, v3, v4;
    if (Array.isArray(v0)) {
      v2 = {};
      v3 = 0;
      for (; v3 < v0.length; (v3)++) {
        v4 = JSON.stringify(v0[v3]);
        v2[v4] = true;
      }
      if (Object.keys(v2).length !== v0.length) {
        return 'uniqueItems';
      }
    }
    return null;
  }
  return {
    root: f0,
  };
}())"
`;
